[package]
name = "rs-args"
version = "0.0.1"
description = "A simple command line argument parser for Rust"
authors = ["Carl Neben <carl-neben@gmx.de>"]
repository = "https://gihub.com/mt4f/rs-args"
categories = ["cli", "parser"]
keywords = [
    "cli", 
    "parser", 
    "command line", 
    "arguments", 
    "args", 
    "command line arguments", 
    "command line parser", 
    "command line argument parser", 
    "command line args", 
    "command line arguments parser", 
    "command line args parser", 
    "command line parser", 
    "command line parser rust", 
    "command line parser rustlang", 
    "command line parser rust-lang", 
    "command line"
]

edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]