[package]
name = "rs-args"
version = "0.2.1"
description = "A simple command line argument parser for Rust"
authors = ["Carl Neben <carl-neben@gmx.de>"]
repository = "https://gihub.com/mt4f/rs-args"
keywords = [
    "data-structures", 
    "terminal", 
    "arguments", 
    "args"
]

edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.52"